# neurosymbolic-ai

./: README.md  pyproject.toml
neurosymbolic_ai/: LNN.ipynb
