[tool.poetry]
name = "neurosymbolic-ai"
version = "0.1.0"
description = ""
authors = ["eddableheath <edable-heath@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "neurosymbolic_ai"}]
license='MIT'

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
